# mkjson

./: .gitmodules  Cargo.toml  README.md
examples/exec/: params.lua  template.json
examples/greeting/: params.lua  template.json
src/: main.rs
ui/: bun.lockb  package.json
ui/src-tauri/: Cargo.toml  config.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src-tauri/src/config/: config.rs
ui/src/components/: BodyTab.svelte  CookieTab.svelte  JsonSelector.svelte  OkCancelDialog.svelte  RequestTab.svelte  Tabs.svelte
ui/src/dialogs/: NameInput.svelte
ui/src/routes/: +page.svelte
ui/src/types/: Config.ts  MyJson.ts  TemplateObject.ts
ui/src/utils/: json.ts
