[package]
name = "mkjson"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
jsonxf = "1.1.1"
liquid = "0.26.9"
mustache = "0.9.0"
rand = { version = "0.8.5", features = ["serde"] }
regex = "1.11.0"
reqwest = { version = "0.12.9", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[build-dependencies]
reqwest = { version = "0.12.9", default-features = false }
